Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextBoolean.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        boolean var = true
        return var
    end
end